# smart_energy_controller

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: controller.hpp  energy_source.hpp  energy_strategy.hpp
src/: controller.cpp  energy_source.cpp  energy_strategy.cpp  main.cpp
